Fix a bug for the default and KNB themes where the first result in the map search list is partially covered by the result list header in Windows 7.

--- a/metacatui/src/main/webapp/js/themes/default/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/default/css/metacatui.css
@@ -1487,12 +1487,12 @@ Bold 700
     	width: auto;
  		right: 10px;
  		margin-top: 5px;
-		height: 22px;
+		height: 30px;
 		z-index: 1;
     }
  	
  	#statcounts{
- 		width: 100%;
+ 		width: 43.5%;
  		padding-left: 10px;
  		background-color: #FFF;
  		height: inherit;
@@ -1516,7 +1516,7 @@ Bold 700
    
    /*-- Results rows --*/
    #results{
-   		margin-top: 33px;
+   		margin-top: 42px;
    		width: 100%;
    		overflow-x: hidden;
    		float: right;
@@ -1822,7 +1822,7 @@ Bold 700
 	}
 	
 	.pagination .sort-by{
-		width: 170px;
+		width: 180px;
 		float: right;
 		margin-right: 10px;
 	}
